// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogList /> should render correctly - index 1`] = `
.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c10 {
  margin: 0;
}

.c12 {
  width: 1.25rem;
  height: 1.25rem;
}

.c9 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c9:focus-within,
.c9:focus {
  position: relative;
  outline: none !important;
}

.c9:focus-within::after,
.c9:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c9:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c13 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c4 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c1 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c8 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c8:first-of-type {
  margin-top: 0.86rem;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c5 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c9:focus-within::after,
  .c9:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: orchid;
    fill: orchid;
  }

  .c9:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <div
          class="c4 c5"
        >
          <h1
            class="c6 c7"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c8"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c9"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c10"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c11"
              >
                <svg
                  class="c12 c13"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c9"
              href="/contact"
            >
              <span
                class="c10"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly authenticated with blogs 1`] = `
.c0 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c1 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c12 {
  margin: 0;
}

.c14 {
  width: 1.25rem;
  height: 1.25rem;
}

.c11 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c11:focus-within,
.c11:focus {
  position: relative;
  outline: none !important;
}

.c11:focus-within::after,
.c11:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c11:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c15 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c6 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  margin: 2.13rem 0 0 0;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c10 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c10:first-of-type {
  margin-top: 0.86rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c7 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c11:focus-within::after,
  .c11:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: orchid;
    fill: orchid;
  }

  .c11:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class=""
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Add a new blog"
            class=""
            href="/create-blog"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  />
                  <div
                    class=""
                  >
                    <h1
                      class="c0"
                    >
                      Add a new blog
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class=""
            href="/blog/asdfg"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c0"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class=""
            type="button"
          >
            <span
              class=""
            >
              Delete blog
            </span>
          </button>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class=""
            href="/blog/zxywvuts"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c0"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class=""
            type="button"
          >
            <span
              class=""
            >
              Delete blog
            </span>
          </button>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class=""
            href="/blog/mndyd8"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c1"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c0"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class=""
            disabled=""
            type="button"
          >
            <span
              class=""
            >
              Delete blog
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class="c6 c7"
        >
          <h1
            class="c8 c9"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c10"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c11"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c12"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c13"
              >
                <svg
                  class="c14 c15"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c11"
              href="/contact"
            >
              <span
                class="c12"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blog load error 1`] = `
.c3 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c11 {
  margin: 0;
}

.c13 {
  width: 1.25rem;
  height: 1.25rem;
}

.c10 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c10:focus-within,
.c10:focus {
  position: relative;
  outline: none !important;
}

.c10:focus-within::after,
.c10:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c10:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c14 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c2 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c8 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c1 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c9 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c9:first-of-type {
  margin-top: 0.86rem;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c7 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c10:focus-within::after,
  .c10:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c10 {
    color: orchid;
    fill: orchid;
  }

  .c10:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c2"
    >
      <h1
        class="c3 c4"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c2 c7"
        >
          <h1
            class="c3 c8"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c9"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c10"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c11"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c12"
              >
                <svg
                  class="c13 c14"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c10"
              href="/contact"
            >
              <span
                class="c11"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blogs 1`] = `
.c1 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c0 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c12 {
  margin: 0;
}

.c14 {
  width: 1.25rem;
  height: 1.25rem;
}

.c11 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c11:focus-within,
.c11:focus {
  position: relative;
  outline: none !important;
}

.c11:focus-within::after,
.c11:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c11:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c15 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c6 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  margin: 2.13rem 0 0 0;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c10 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c10:first-of-type {
  margin-top: 0.86rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c7 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c11:focus-within::after,
  .c11:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: orchid;
    fill: orchid;
  }

  .c11:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class=""
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class=""
            href="/blog/asdfg"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class=""
            href="/blog/zxywvuts"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class=""
            href="/blog/mndyd8"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class="c6 c7"
        >
          <h1
            class="c8 c9"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c10"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c11"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c12"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c13"
              >
                <svg
                  class="c14 c15"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c11"
              href="/contact"
            >
              <span
                class="c12"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with initial state 1`] = `
.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c10 {
  margin: 0;
}

.c12 {
  width: 1.25rem;
  height: 1.25rem;
}

.c9 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c9:focus-within,
.c9:focus {
  position: relative;
  outline: none !important;
}

.c9:focus-within::after,
.c9:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c9:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c13 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c4 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c1 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c8 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c8:first-of-type {
  margin-top: 0.86rem;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c5 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c9:focus-within::after,
  .c9:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    color: orchid;
    fill: orchid;
  }

  .c9:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <div
          class="c4 c5"
        >
          <h1
            class="c6 c7"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c8"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c9"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c10"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c11"
              >
                <svg
                  class="c12 c13"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c9"
              href="/contact"
            >
              <span
                class="c10"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with ssrBlogs 1`] = `
.c1 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c0 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c12 {
  margin: 0;
}

.c14 {
  width: 1.25rem;
  height: 1.25rem;
}

.c11 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c11:focus-within,
.c11:focus {
  position: relative;
  outline: none !important;
}

.c11:focus-within::after,
.c11:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c11:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c15 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c6 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  margin: 2.13rem 0 0 0;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c10 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c10:first-of-type {
  margin-top: 0.86rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  position: absolute;
  top: 0;
  left: calc(50% - 50vw);
  z-index: -1;
  width: 100vw;
  height: 100%;
  background-color: #fbfbfb;
}

.c7 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c11:focus-within::after,
  .c11:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c11 {
    color: orchid;
    fill: orchid;
  }

  .c11:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    background-color: #121313;
  }
}

<div>
  <div
    class="page-containerstyles__StyledPageContainer-sc-19l7k4-0 "
    width="default"
  >
    <div
      class=""
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class=""
            href="/blog/asdfg"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class=""
            href="/blog/zxywvuts"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class=""
            href="/blog/mndyd8"
          >
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <div
                    class="date container"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      <span
                        class="c0"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <h1
                      class="c1"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class=""
                    >
                      <div
                        class=""
                      >
                        <span
                          class=""
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class=""
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class=""
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="c2 "
                          >
                            <div
                              class="c3"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class=""
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class=""
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="animated-content__wrapper--hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <div
          class="c6 c7"
        >
          <h1
            class="c8 c9"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="c10"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="c11"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c12"
              >
                Creative Commons BY-SA 3.0
              </span>
              <div
                class="c13"
              >
                <svg
                  class="c14 c15"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="c11"
              href="/contact"
            >
              <span
                class="c12"
              >
                contact me
              </span>
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
